<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/app_padding">

    <ImageView
        android:id="@+id/notification_icon"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/app_name"
        android:src="@mipmap/ic_launcher"
        app:layout_constraintBottom_toBottomOf="@id/notification_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/notification_title" />

    <TextView
        android:id="@+id/notification_title"
        style="@style/TextAppearance.AppCompat.Large"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/app_margin"
        android:layout_marginStart="@dimen/app_margin"
        android:singleLine="true"
        android:text="@string/punching"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/notification_stop"
        app:layout_constraintStart_toEndOf="@+id/notification_icon"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageView
        android:id="@+id/notification_stop"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/stop"
        app:layout_constraintBottom_toBottomOf="@+id/notification_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/notification_title"
        app:layout_constraintTop_toTopOf="@+id/notification_title"
        app:srcCompat="@drawable/ic_stop" />

</android.support.constraint.ConstraintLayout>